[459589] Windows: Add shortcuts for installed product to the menu and desktop
https://bugs.eclipse.org/bugs/show_bug.cgi?id=459589